enum support and code clean up